// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages reducer handles RECEIVE_PAGES action case 1 1`] = `
Object {
  "isFetching": 0,
  "items": Array [
    Object {
      "content": Object {
        "protected": false,
      },
      "id": 1,
      "name": "Nice page",
    },
    Object {
      "content": Object {
        "protected": false,
      },
      "id": 2,
      "name": "Nicer page",
    },
    Object {
      "content": Object {
        "protected": false,
      },
      "id": 3,
      "name": "Nicest page",
    },
  ],
}
`;

exports[`Pages reducer handles RECEIVE_PAGES action case 2 1`] = `
Object {
  "isFetching": 0,
  "items": Array [
    Object {
      "content": Object {
        "protected": false,
      },
      "id": 1,
      "name": "Nice page",
    },
    Object {
      "content": Object {
        "protected": false,
      },
      "id": 2,
      "name": "Nicer page",
    },
    Object {
      "content": Object {
        "protected": false,
      },
      "id": 3,
      "name": "Nicest page",
    },
  ],
}
`;

exports[`Pages reducer handles RECEIVE_PAGES with password protected pages keeps same state 1`] = `
Object {
  "isFetching": 0,
  "items": Array [
    Object {
      "content": Object {
        "protected": false,
      },
      "id": 1,
      "name": "Nice page",
    },
    Object {
      "content": Object {
        "protected": false,
      },
      "id": 2,
      "name": "Nicer page",
    },
  ],
}
`;

exports[`Pages reducer handles REQUEST_PAGES action 1`] = `
Object {
  "isFetching": 1,
  "items": Array [
    Object {
      "content": Object {
        "protected": false,
      },
      "id": 1,
      "name": "Nice page",
    },
    Object {
      "content": Object {
        "protected": false,
      },
      "id": 2,
      "name": "Nicer page",
    },
  ],
}
`;

exports[`Pages reducer returns same state on an unhandled action 1`] = `
Object {
  "isFetching": 0,
  "items": Array [],
}
`;
